--- a/style/elvis/src/components/table.scss
+++ b/style/elvis/src/components/table.scss
@@ -168,6 +168,7 @@ $table-border-radius: 8px;
   td {
     @include typography.typography('text-description');
     padding: $table-padding;
+    text-align: left;
   }
 
   tbody:not(:last-of-type) tr td,
